<resources>
    <string name="app_name">DroidCafe</string>
    <string name="textintro">Droid Desserts</string>
    <string name="ice_cream_desc">"Ice cream sandwiches have chocolate wafers and vanilla filling. "</string>
    <string name="donut_description">Donuts are glazed and sprinkled with candy.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="textview">TextView</string>
</resources>